--- a/Forms2.html
+++ b/Forms2.html
@@ -122,9 +122,9 @@
         <input type="text" id="webapp-optimization" name="webapp-optimization" placeholder="Example: Cellulant, Twiga Foods" required></input>
 
         <label for="webapp-optimization">8. Name two Kenyan freelancing platforms for web developers Upwork/Fiverr:</label>
-        <input type="text" id="webapp-optimization" name="webapp-optimization" placeholder="Example: Kuhustle, WorkPay Africa" required></input>
+        <input type="text" id="webapp-optimization" name="webapp-optimization" placeholder="Example: Kuhustle, WorkPay Africa" required>
 
-        <div class="checkbox-group"></div>
+        <div class="checkbox-group">
             <label for="certify">I certify that all responses are original and not AI-generated</label>
             <input type="checkbox" id="certify" name="certify" required>
         </div>
