--- a/Forms2.html
+++ b/Forms2.html
@@ -119,7 +119,7 @@
         <textarea id="webapp-optimization" name="webapp-optimization" placeholder="Explain using PWA, Lazy loading and CDN strategies" required></textarea>
 
         <label for="webapp-optimization">7. Name two Kenyan tech startups actively hiring full-stack developers:</label>
-        <input type="text" id="webapp-optimization" name="webapp-optimization" placeholder="Example: Cellulant, Twiga Foods" required></input>
+        <input type="text" id="webapp-optimization" name="webapp-optimization" placeholder="Example: Cellulant, Twiga Foods" required>
 
         <label for="webapp-optimization">8. Name two Kenyan freelancing platforms for web developers Upwork/Fiverr:</label>
         <input type="text" id="webapp-optimization" name="webapp-optimization" placeholder="Example: Kuhustle, WorkPay Africa" required>
