--- a/javascript/js2.html
+++ b/javascript/js2.html
@@ -7,7 +7,7 @@
         </script>
     </head>
     <body>
-        <h3>Demo Javascript in Header section</h3>
+        <h1>Demo for Javascript in the Header section</h1>
         <p id="demo">A Paragraph.</p>
         <button type="button" onclick="myFunction()">Try it</button>
     </body>
