updated javasript click to display date

--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -5,7 +5,7 @@
 <h1>My First JavaScript</h1>
 
 <button type="button" onclick="showDate()">
-Click here to display the current Date and Time.
+Click here to display current Date and Time.
 </button>
 
 <p id="demo"></p>
