--- a/javascript/js4.html
+++ b/javascript/js4.html
@@ -9,7 +9,7 @@
 <button type="button" onclick="myFunction()">Try it</button>
 
 <p>This example links to "script.js".</p>
-<p>(myFunction is stored in "script.js in the same folder")</p>
+<p>myFunction is stored in "script.js in the same folder"</p>
 
 <script src="script.js"></script>
 
