--- a/MIDSEM/index.html
+++ b/MIDSEM/index.html
@@ -31,34 +31,25 @@
             <h2>Our Menu</h2>
             <div class="menu-items">
                 <div class="item">
-                    <p>Breakfast 
-                        Mandazi & Chai – KES 150
-                        Mahindi Choma & Coffee – KES 200
+                    <p>Breakfast 🍽️</p>
+                        <p>Mandazi & Chai – KES 150
                         Omelette & Toast – KES 250
-                        English Breakfast (eggs, sausage, bacon, beans, toast) – KES 500
-                        Kenyan Porridge (Uji) – KES 180
-                        Lunch & Dinner 
-                        Nyama Choma (Goat/Beef) with Ugali & Kachumbari – KES 700
+                        Kenyan Porridge (Uji) – KES 180</p>
+                        <p>Lunch & Dinner 🍛</p>
+                        <p>Nyama Choma with Ugali & Kachumbari – KES 700
                         Fried Tilapia with Ugali & Sukuma Wiki – KES 650
-                        Matoke in Coconut Sauce – KES 450
-                        Chicken Stew with Rice or Chapati – KES 600
                         Beef Pilau with Kachumbari – KES 550
                         Mukimo with Beef Stew – KES 500
-                        Vegetable Stir-fry with Rice/Chapati – KES 400
-                        Snacks & Sides 
-                        Samosa  – KES 100
-                        Bhajia with Chutney – KES 300
+                        Vegetable Stir-fry with Rice/Chapati – KES 400</p>
+                        <p>Snacks & Sides 🍟</p>
+                        <p>Samosa – KES 100
                         Chips Masala – KES 350
-                        Githeri (Traditional Mixed Beans & Maize) – KES 400
-                        Desserts 
-                        Kaimati  – KES 200
-                        Mahamri & Maziwa Mala – KES 250
-                        Fruit Salad with Honey – KES 300
-                        Beverages 
-                        Fresh Juice (Mango, Passion, Pineapple) – KES 250
-                        Dawa  – KES 300
-                        Chai ya Tangawizi– KES 200
-                        Soda – KES 150
+                        Githeri – KES 400</p>
+                        <p>Beverages ☕🥤</p>
+                        <p>Fresh Juice (Mango, Passion, Pineapple) – KES 250
+                        Dawa – KES 300
+                        Chai ya Tangawizi (Ginger Tea) – KES 200
+                        Soda– KES 150
                         Bottled Water – KES 100</p>
                 </div>
             </div>
