--- a/javascript/js5.html
+++ b/javascript/js5.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <body>
+        <head><meta charset="utf-8"></head><head></head><body>
         <h2>JavaScript variables</h2>
 
         <p>
@@ -19,5 +19,5 @@
             y=y+23;
             document.getElementById("demo2").innerHTML = y;
         </script>
-    </body>
-</html>
+    
+</body></html>
