--- a/javascript/js2.html
+++ b/javascript/js2.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <script>
             function myFunction() {
                 document.getElementById("demo").innerHTML = "Paragraph changed.";
