--- a/javascript/js3.html
+++ b/javascript/js3.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html><head><meta charset="utf-8"></head><head></head><body>
 
 <h1>Demo JavaScript in the Body section</h1>
 
@@ -14,5 +13,5 @@ function myFunction() {
 }
 </script>
 
-</body>
-</html> 
+
+ </body></html>
