--- a/javascript/js4.html
+++ b/javascript/js4.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html><head><meta charset="utf-8"></head><head></head><body>
 
 <h2>Demo for an External JavaScript</h2>
 
@@ -13,5 +12,5 @@
 
 <script src="script.js"></script>
 
-</body>
-</html>
+
+</body></html>
