--- a/javascript/jsobjects.html
+++ b/javascript/jsobjects.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html>
-        <head><meta charset="utf-8"></head><head></head><body>
-        <h2>JavaScript Objects</h2>
-        <p id="demo"></p>
-        <script>
-            let car ={
-                make: "Toyota",
-                model: "Camry",
-                color: "white",
-                speed: 200,
-            };
+<head>
+    <meta charset="utf-8">
+</head>
+<body>
+    <h1>JavaScript Objects</h1>
+    <h2>Creating an Object</h2>
 
-            console.log(car); // output the entire object
-            console.log(car.make); // accessing property of the object
-        </script>    
-    
-</body></html>
+    <p id="demo"></p>
+
+    <script>
+        let car = {
+            make: "Toyota",
+            model: "Camry",
+            color: "white",
+            speed: 200,
+        };
+
+        console.log(car); // output the entire object
+        console.log(car.make); // accessing property of the object
+
+        // Display the car object properties in the HTML
+        document.getElementById("demo").innerHTML = 
+            "Make: " + car.make + "<br>" +
+            "Model: " + car.model + "<br>" +
+            "Color: " + car.color + "<br>" +
+            "Speed: " + car.speed + " km/h";
+    </script>
+</body>
+</html>
