--- a/mysite/about.html
+++ b/mysite/about.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
     <div class="dashboard">
         <nav class="sidebar">
             <div class="profile-pic">
@@ -17,6 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html"  class="active">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -48,4 +52,6 @@
             </section>
         </main>
     </div>
+    <script src="scripts.js"></script>
 </body>
+</html>
