--- a/mysite/index.html
+++ b/mysite/index.html
@@ -8,15 +8,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
     <div class="dashboard">
         <nav class="sidebar">
             <div class="profile-pic">
                 <img src="your-photo.jpg" alt="Profile Picture">
             </div>
+            <div class="theme-toggle">
+                <i class="fas fa-moon"></i>
+                <span>Dark Mode</span>
+                <label class="switch">
+                    <input type="checkbox" id="themeToggle" title="Toggle dark mode">
+                    <span class="slider round"></span>
+                </label>
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -53,5 +65,6 @@
             </section>
         </main>
     </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
