--- a/mysite/index.html
+++ b/mysite/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"="width=device-width, initial-scale=1.0">
     <title>Home | My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -35,6 +35,7 @@
 
         <main class="content">
             <section class="hero">
+                <p class="intro">Hey, I'm Collins Kinyanjui,</p>
                 <h1>Welcome to My Digital Space</h1>
                 <p class="tagline">IT Professional & Passionate Developer</p>
                 <div class="it-icons">
