--- a/mysite/index.html
+++ b/mysite/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -58,9 +58,11 @@
                     </div>
                     <div class="card">
                         <h3>Skills Update</h3>
-                        <p>Recently certified in Cybersecurity Fundamentals.</p>
-                        <p>Artificial Intelligence/Machine Learning.</p>
-                        <p>Understanding hardware-software integration.</p>
+                        <ul class="skills-list">
+                            <li><i class="fas fa-shield-alt"></i> Recently certified in Cybersecurity Fundamentals</li>
+                            <li><i class="fas fa-brain"></i> Artificial Intelligence/Machine Learning</li>
+                            <li><i class="fas fa-cogs"></i> Understanding hardware-software integration</li>
+                        </ul>
                     </div>
                 </div>
             </section>
