--- a/mysite/blog.html
+++ b/mysite/blog.html
@@ -45,6 +45,7 @@
                     </article>
 
                     <article class="blog-card">
+                        <div class="blog-badge">New</div>
                         <img src="blog-security.jpg" alt="Cybersecurity" class="blog-image">
                         <div class="blog-content">
                             <div class="blog-meta">
