Updated mobile view

--- a/mysite/index.html
+++ b/mysite/index.html
@@ -13,6 +13,9 @@
     </div>
     <div class="dashboard">
         <nav class="sidebar">
+            <button class="sidebar-toggle" aria-label="Toggle Sidebar">
+                <i class="fas fa-bars"></i>
+            </button>
             <div class="profile-pic">
                 <img src="your-photo.jpg" alt="Profile Picture">
             </div>
