--- a/mysite/portfolio.html
+++ b/mysite/portfolio.html
@@ -16,6 +16,14 @@
             <div class="profile-pic">
                 <img src="your-photo.jpg" alt="Profile Picture">
             </div>
+            <div class="theme-toggle">
+                <i class="fas fa-moon"></i>
+                <span>Dark Mode</span>
+                <label class="switch">
+                    <input type="checkbox" id="themeToggle" title="Toggle dark mode">
+                    <span class="slider round"></span>
+                </label>
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
